tests/errors/compiler/npointer_eq_pointer/npointer_eq_pointer_1.c
int main()
{
	int num = 5;
	int *ptr = &num;
	int &pointer = ptr;
	return 0;
}